<resources xmlns:tools="http://schemas.android.com/tools" xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_title">Ultra Manager Settings</string>
    <string name="loading">Loading\u2026</string>
    <string name="dlg_ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="About_settings_title">About UltraDevs</string>
    <string name="About_settings_summary">Get information about Us</string>
    <string name="battery_settings_category">Battery Lights</string>
    <string name="battery_settings_title">Battery icon settings</string>
    <string name="battery_settings_summary_on">Battery Light leds is ON</string>
    <string name="battery_settings_summary_off">Battery Light leds is OFF</string>
    <string name="notification_settings_category">Notification Lights</string>
    <string name="notification_settings_title">Notification Lights</string>
    <string name="notification_settings_summary_on">Notification Light leds is ON</string>
    <string name="notification_settings_summary_off">Notification Light leds is OFF</string>
    <string name="aosp_about_info_summary">UltraCAF is an AOSP based rom which provides stock CAF AOSP with some features along with the Substratum theme engine. Being based on AOSP CAF.</string>
    <string name="dev_info">About UltraCAF</string>
    <string name="leads">Team</string>
    <string name="github">Github</string>
    <string name="github_description">View our source code</string>
    <string name="maintainers">Maintainers</string>
    <string name="dev_1">Ahmed Hady</string>
    <string name="dev1_description"> Rom, Kernel Developer, Osprey,Merlin[WIP] Maintainer</string>
    <string name="dev_2">Yousef Alsageer &#40;YSHALSAGER&#41;</string>
    <string name="dev2_description">Developer, Xiaomi Mi Max Maintainer</string>
    <string name="dev_3">Sumit &#40;androidlover5842&#41;</string>
    <string name="dev3_description">msm8916, msm7x27a Maintainer</string>
    <string name="version_title">CAF Version</string>
    <string name="version_default">Unknown</string>
    <string name="device_info_default">Unknown</string>
    <string name="root_enable">Enable Root Options</string>
    <string name="root_category_governors">Kernel Governor</string>
    <string name="root_category_dt2w">Kernel Dt2W</string>
    <string name="root_category_power">Power Options</string>
    <string name="root_category_usb">USB Fast Charging</string>
    <string name="root_category_hotplug">Kernel Hotplug</string>
    <string name="root_governors_selector_title">Kernel Governors</string>
    <string name="root_governors_selector_summary">Choose CPU Governor for a list of available Governors in current Kernel</string>
    <string name="root_dt2w_title">Kernel Double Tap to Wake</string>
    <string name="root_dt2w_summary">Kernel Feature Enables you to wake your phone by double tapping on your screen</string>
    <string name="root_power_archpower_title">Arch Power Feature</string>
    <string name="root_power_archpower_summary">Arch Powe is MSM Power feature can help you manage your phone power</string>
    <string name="root_msmHP_title">MSM Hotplug</string>
    <string name="root_msmHP_summary">Switch MSM HotPlug Kernel feature</string>
    <string name="root_alu_title">AluCard HotPlug</string>
    <string name="root_alu_summary">Switch AluCard HotPlug Kernel feature</string>
    <string name="root_usbFC_title">Usb Fast Charge</string>
    <string name="root_usbFC_summary">USB Fast charging feature enable you to charge your phone fast through USB port</string>
    <string name="smartmax">SmartMax</string>
    <string name="lionfish">LionFish</string>
    <string name="chil">Chil</string>
    <string name="darkness">Darkness</string>
    <string name="zzmoove">zzMoove</string>
    <string name="wheatley">Wheatley</string>
    <string name="impulse">Impulse</string>
    <string name="intelliactive">IntelliActive</string>
    <string name="interactive_pro">Interactive_Pro</string>
    <string name="interactive">Interactive</string>
    <string name="ondemand">onDemand</string>
    <string name="conservative">Conservative</string>
    <string name="userspace">UserSpace</string>
    <string name="powersave">PowerSave</string>
    <string name="performance">Performance</string>
    <string name="traffic_title">Network Traffic</string>
    <string name="traffic_summary">Add Network Traffic Indicator To your Statusbar</string>
    <string name="screenshot_shutter_sound_title">Screenshot sound</string>
    <string name="network_traffic_title">Network traffic</string>
    <string name="show_network_traffic_state">Status bar traffic monitor</string>
    <string name="show_network_traffic_unit">Display unit</string>
    <string name="show_network_traffic_frequency">Update interval</string>
    <string name="show_network_traffic_disable">Disabled</string>
    <string name="show_network_traffic_up">Outgoing</string>
    <string name="show_network_traffic_down">Incoming</string>
    <string name="show_network_traffic_all">Outgoing and incoming</string>
    <string name="show_network_traffic_bit">Bits per second</string>
    <string name="show_network_traffic_byte">Bytes per second</string>
    <string name="show_network_traffic_500">500 ms</string>
    <string name="show_network_traffic_1000">1000 ms</string>
    <string name="show_network_traffic_1500">1500 ms</string>
    <string name="show_network_traffic_2000">2000 ms</string>
    <string name="network_traffic_autohide">Auto hide</string>
    <string name="network_traffic_autohide_summary">Hide the traffic monitor when there is no activity</string>
    <string name="network_traffic_autohide_threshold">Inactivity threshold</string>
    <string name="pref_scrollingcache_title">Scrolling cache</string>
    <string name="pref_scrollingcache_summary">Scrolling cache may improve scrolling performance at the cost of memory</string>
    <string name="pref_scrollingcache_force_enable">Force enable</string>
    <string name="pref_scrollingcache_default_enable">Default enable</string>
    <string name="pref_scrollingcache_default_disable">Default disable</string>
    <string name="pref_scrollingcache_force_disable">Force disable</string>
    <string name="listsystem">list</string>
    <string name="sizer_title">App remover</string>
    <string name="caution">Caution!</string>
    <string name="sizer_message_startup">This tool allows you to delete system apps. Use with caution and only delete apps you know are safe to be removed.</string>
    <string name="sizer_message_delete">Are you sure you want to delete this app?</string>
    <string name="btn_delete">Delete selected APPs now!</string>
    <string name="delete_progress_title">Deleting</string>
    <string name="delete_progress">Selected files are being deleted...</string>
    <string name="delete_success">Deleted</string>
    <string name="delete_fail">Unable to delete</string>
    <string name="btn_profile">Profile</string>
    <string name="sizer_message_sdnowrite">Cannot write to SD Card.</string>
    <string name="sizer_message_sdnoread">Cannot read SD Card.</string>
    <string name="sizer_message_filesuccess">Created profile.</string>
    <string name="sizer_message_filefail">Failed to create profile.</string>
    <string name="sizer_message_noselect">Nothing selected.</string>
    <string name="system_app_remover">System App Remover</string>
    <string name="system_app_remover_summary">You can Remove not needed System apps</string>
    <string name="battery_settings_summary">Change battery icon, percentage</string>
    <string name="status_bar_battery_style_title">Battery status style</string>
    <string name="status_bar_battery_style_icon_portrait">Icon portrait</string>
    <string name="status_bar_battery_style_icon_landscape">Icon landscape</string>
    <string name="status_bar_battery_style_circle">Circle</string>
    <string name="status_bar_battery_style_text">Text</string>
    <string name="status_bar_battery_style_hidden">Hidden</string>
    <string name="status_bar_battery_percentage_title">Show battery percentage</string>
    <string name="status_bar_battery_percentage_default">Hidden</string>
    <string name="status_bar_battery_percentage_text_inside">Inside the icon</string>
    <string name="status_bar_battery_percentage_text_next">Next to the icon</string>
    <string name="power_menu_title">Power menu</string>
    <string name="power_menu_title_summary">View or change power menu entries</string>
    <string name="power_menu_power_title">Power off</string>
    <string name="power_menu_reboot_title">Restart</string>
    <string name="power_menu_screenshot_title">Screenshot</string>
    <string name="power_menu_airplane_title">Airplane mode</string>
    <string name="power_menu_users_title">User switcher</string>
    <string name="power_menu_search_title">Search</string>
    <string name="power_menu_voice_title">Voice search</string>
    <string name="power_menu_settings_title">Settings shortcut</string>
    <string name="power_menu_lockdown_title">Device lockdown</string>
    <string name="power_menu_bug_report_title">Bug report</string>
    <string name="power_menu_sound_title">Sound panel</string>
    <string name="power_menu_bug_report_disabled">Bug reporting is disabled in development settings</string>
    <string name="app_intro">Welcome To UltraMan App from UltraCAF Team .. This App designed to manage some additional feature added to our UltraCAF rom .. Enjoy!</string>
    <string name="System_title">System Settings</string>
    <string name="System_summary">Some System Tweaks</string>
    <string name="Status_title">Status bar Settings</string>
    <string name="Status_summary">Tweaks for status bar</string>
    <string name="lights_title">Battery Lights Settings</string>
    <string name="lights_summary">Switch battery lights on/off</string>
    <string name="power_title">Power Menu</string>
    <string name="power_summary">Manage your Power Menu buttons</string>
    <string name="root_title">Root Based Settings</string>
    <string name="root_summary">Manage Some Rom and Kernel root-based Options</string>
    <string name="changelog_title">UltraCAF ChangeLog</string>
    <string name="changelog_summary">Check our rom and Kernel latest Changes, additions, and features</string>
    <string name="lights_category">Lights</string>
    <string name="reset">Reset</string>
    <string name="default_string">Default</string>
    <string name="add">Add</string>
    <string name="enabled">Enabled</string>
    <string name="choose_app">Choose application</string>
    <string name="help">Help</string>
    <string name="reset_message">Reset all entries to default?</string>
    <string name="attention">Attention</string>
    <string name="advanced">Advanced</string>
    <string name="profiles_add">Add...</string>
    <string name="profile_choose_app">Choose app</string>
    <string name="ok">Okay</string>
    <string name="color_picker_fragment_title">Color Picker</string>
    <string name="apply_color_title">Apply color</string>
    <string name="edit_hex_title">HEX value</string>
    <string name="palette_material_title">Material</string>
    <string name="palette_rgb_title">RGB</string>
    <string name="reset_color_title">Reset</string>
    <string name="reset_android_title">Android default</string>
    <string name="reset_theme_default_title">Theme default</string>
    <string name="favorites_title">Favorites</string>
    <string name="hide_favorites_title">Hide favorites</string>
    <string name="show_favorites_title">Show favorites</string>
    <string name="hide_help_title">Hide help</string>
    <string name="show_help_title">Show help</string>
    <string name="empty_title">Empty</string>
    <string name="buttons_pref_title">Buttons</string>
    <string name="buttons_pref_summary">Customize your device keys and buttons</string>
</resources>