<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <SwitchPreference android:key="root_enable" android:title="@string/root_enable" android:persistent="true" />
    <PreferenceCategory android:title="@string/root_category_governors" android:dependency="root_enable">
        <ListPreference
            android:defaultValue="180"
            android:entries="@array/gover"
            android:entryValues="@array/gover_val"
            android:key="govers"
            android:negativeButtonText="@null"
            android:positiveButtonText="@null"
            android:title="@string/root_governors_selector_title"
            android:summary="@string/root_governors_selector_summary"/>
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/root_category_dt2w" android:dependency="root_enable">
        <SwitchPreference
            android:key="dt2w"
            android:title="@string/root_dt2w_title"
            android:summary="@string/root_dt2w_summary"/>
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/root_category_power" android:dependency="root_enable">
        <SwitchPreference
            android:key="archpower"
            android:title="@string/root_power_archpower_title"
            android:summary="@string/root_power_archpower_summary"/>
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/root_category_hotplug" android:dependency="root_enable">
        <SwitchPreference
            android:key="msmhotplug"
            android:title="@string/root_msmHP_title"
            android:summary="@string/root_msmHP_summary"/>

        <SwitchPreference
            android:key="alucard"
            android:title="@string/root_alu_title"
            android:summary="@string/root_alu_summary"/>
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/root_category_usb" android:dependency="root_enable">
        <SwitchPreference android:key="usbfastcharge"
            android:title="@string/root_usbFC_title"
            android:summary="@string/root_usbFC_summary" />
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/system_app_remover">
        <PreferenceScreen
            android:key="systemappremover"
            android:icon="@drawable/ic_systemappremover"
            android:title="@string/system_app_remover"
            android:summary="@string/system_app_remover_summary"
            android:fragment="com.ultra.manager.AppRemover.SystemappRemover" />
    </PreferenceCategory>
</PreferenceScreen>
