<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:title="@string/battery_settings_category">
        <com.ultra.manager.widgets.UltraSystemSettingSwitchPreference
            android:key="battery_light_enabled"
            android:title="@string/battery_settings_title"
            android:defaultValue="true"
            android:summaryOn="@string/battery_settings_summary_on"
            android:summaryOff="@string/battery_settings_summary_off"/>
    </PreferenceCategory>

    <PreferenceCategory android:key="notification_pulse_category" android:title="@string/notification_settings_category">
        <com.ultra.manager.widgets.UltraSecureSettingSwitchPreference
            android:key="notification_pulse"
            android:title="@string/notification_settings_title"
            android:defaultValue="true"
            android:summaryOn="@string/notification_settings_summary_on"
            android:summaryOff="@string/notification_settings_summary_off" />
    </PreferenceCategory>
</PreferenceScreen>
