<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:title="@string/cat_statusbar">
        <PreferenceScreen
            android:fragment="com.ultra.manager.traffic.Traffic"
            android:icon="@drawable/ic_traffic"
            android:key="traffic"
            android:summary="@string/traffic_summary"
            android:title="@string/traffic_title">
            <intent
                android:action="android.intent.action.VIEW"
                android:targetPackage="com.ultra.manager"
                android:targetClass="com.ultra.manager.traffic.TrafficActivity" />
        </PreferenceScreen>
    </PreferenceCategory>

  <PreferenceCategory
        android:title="@string/status_bar_battery_style_title"
        android:summary="@string/battery_settings_summary">
      <ListPreference
           android:key="status_bar_battery_style"
           android:title="@string/status_bar_battery_style_title"
           android:dialogTitle="@string/status_bar_battery_style_title"
           android:entries="@array/status_bar_battery_style_entries"
           android:entryValues="@array/status_bar_battery_style_values" />

      <ListPreference
           android:key="status_bar_show_battery_percent"
           android:title="@string/status_bar_battery_percentage_title"
           android:dialogTitle="@string/status_bar_battery_percentage_title"
           android:entries="@array/status_bar_battery_percentage_entries"
           android:entryValues="@array/status_bar_battery_percentage_values" />
   </PreferenceCategory>
</PreferenceScreen>
