<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory android:title="@string/cat_other">
        <com.ultra.manager.widgets.UltraSystemSettingSwitchPreference
            android:key="screenshot_sound"
            android:title="@string/screenshot_shutter_sound_title"
            android:icon="@drawable/ic_photo"/>

     <ListPreference
        android:key="pref_scrollingcache"
        android:dialogTitle="@string/pref_scrollingcache_title"
        android:title="@string/pref_scrollingcache_title"
        android:summary="@string/pref_scrollingcache_summary"
        android:entries="@array/entries_scrollingcache"
        android:entryValues="@array/values_scrollingcache" />

      <PreferenceScreen
         android:key="systemappremover"
         android:fragment="com.ultra.manager.AppRemover.SystemappRemover"
         android:layout="@layout/preference_systemappremover"
         android:title="@string/system_app_remover">
            <intent
                android:action="android.intent.action.VIEW"
                android:targetPackage="com.ultra.manager"
                android:targetClass="com.ultra.manager.AppRemover.AppRemoverActivity" />
      </PreferenceScreen>
    </PreferenceCategory>
</PreferenceScreen>
